@@ -1,3 +1,8 @@
+2007-10-07 [colin]	3.0.2cvs26
+
+	* src/prefs_toolbar.c
+		Fix old icon being used when none is selected
+
 2007-10-07 [colin]	3.0.2cvs25
 
 	* src/toolbar.c
